--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,22 @@
 <h1>Create a new Pet</h1>
 
+<form action="/pets" method="post">
+<label>Name:</label><br>
+<input type="text" name="pet[name]"><br>
+<br>
+
+<label>Select an existing owner:</label><br>
+<% @owners.each do |owner| %>
+<input type="checkbox" name="pet[owner_id]" value="<%= owner.id %>" id="<%= owner.id %>"><%= owner.name %></input>
+<% end %><br>
+<br>
+
+<label>or create a new owner:</label><br>
+<br>
+
+<label>Name:</label><br>
+<input type="text" name="owner[name]"><br>
+<br>
+
+<input type="submit" value="Create Pet">
+</form>
