--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -2,7 +2,7 @@
 
 <form action="/pets" method="post">
 <label>Name:</label><br>
-<input type="text" name="pet[name]"><br>
+<input type="text" name="pet[name]" id="pet_name"><br>
 <br>
 
 <label>Select an existing owner:</label><br>
